<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/notif_title"
        style="@style/TodoAppText.SubHeader"

        android:text="@string/notif_dialog_title"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/notif_text"
        style="@style/TodoAppText.Large"

        android:text="@string/notif_dialog_text"

        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notif_title"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notif_yes"
        style="@style/CustomMatButton"

        android:text="@string/notif_dialog_yes"

        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/notif_no"
        app:layout_constraintTop_toBottomOf="@id/notif_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notif_no"
        style="@style/CustomMatButton"

        android:text="@string/notif_dialog_no"

        android:layout_marginTop="10dp"

        app:layout_constraintStart_toEndOf="@id/notif_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notif_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>